# neon-serde

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  readme.md  rustfmt.toml
.circleci/: config.yml
ci/: setup.sh  test.sh
src/: de.rs  errors.rs  lib.rs  macros.rs  ser.rs
test/: package.json
test/__tests__/: get_values.js
test/native/: Cargo.toml
test/native/src/: lib.rs
test_macro/: package.json
test_macro/__tests__/: macros.js
test_macro/lib/: index.js
test_macro/native/: Cargo.toml
test_macro/native/src/: lib.rs
