[package]
name = "neon-serde"
version = "0.0.1"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
description = "Easily serialize object for use with neon"
license = "MIT"

[dependencies]
serde = "1.*"
error-chain = "0.11.*"
neon = "0.1.*"
cast = "0.2.*"

[dev-dependencies]
serde_derive = "1.*"

[badges]
travis-ci = { repository = "GabrielCastro/neon-serde" }

[profile.dev]
codegen-units = 4
lto = false  

[profile.release]
codegen-units = 4
lto = false  
