[package]
name = "test"
version = "0.1.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
license = "MIT"
build = "build.rs"
publish = false

[lib]
name = "test"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
neon-serde = { path = "../../" }
serde_derive = "1.0.106"
serde = "1.0.106"
serde_bytes = "0.11.3"

[profile.dev]
codegen-units = 4
lto = false

[profile.release]
codegen-units = 4
lto = false
